--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <form>
                 <input type="text" placeholder="Seu nome"><br>
                 <input type="email" placeholder="Seu e-mail"><br> <!-- Tipo email mais adequado -->
-                <input type="color" title="Escolha uma cor"><br> <!-- Adicionado título acessível -->
             </form>
+            <button>Enviar</button>
         </section>
 
         <!-- Link de compra -->
